Expanding and collapsing threads on inline forums works, but it could use a little styling. Also fixed responding to threads which I may have broken in the commit prior to this one.

--- a/lms/static/sass/_discussion.scss
+++ b/lms/static/sass/_discussion.scss
@@ -1480,7 +1480,8 @@ body.discussion {
         border: 1px solid;
         border-radius: 3px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-
+        min-height: 0;
+        padding: 1em;
         .discussion-post {
           header {
             padding-bottom: 0.1em;
@@ -1508,12 +1509,21 @@ body.discussion {
           }
 
         }
+        .discussion-reply-new {
+          .wmd-input {
+            height: 120px;
+          }
+        }
+        // Content that is hidden by default in the inline view
+        .post-extended-content{
+          display: none;
+        }
+        .collapse-post{
+          display:none;
+        }
       }
     }
   }
 
-  //.discussion-reply-new {
-  //  display:none;
-  //}
 
 }
